samples/_failures_safe/1761700426_65832f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f27f7ae.c: In function ‘main’:
./samples/SAFE/__tmp_5f27f7ae.c:151:9: error: expected expression at end of input
  151 |         if (scanf("%d %d %d", &u, &
      |         ^~
./samples/SAFE/__tmp_5f27f7ae.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f27f7ae.c:151:9: error: expected declaration or statement at end of input
